--- a/_sass/components/_utility.scss
+++ b/_sass/components/_utility.scss
@@ -6,12 +6,6 @@
 .sticky {
   position: sticky;
   top: 0;
-
-  &::before,
-  &::after {
-    content: '';
-    display: table;
-  }
 }
 
 .lg-show {
